Выполнение спринта #6.